<resources>
    <string name="app_name">bchelle-GearBook</string>
    <string name="text_view_total_price_default">You Have No Gear!</string>
    <string name="add_gear_prompt">Enter the details for your gear below</string>
    <string name="text_input_maker_hint">Maker</string>
    <string name="text_input_price_hint">Price</string>
    <string name="text_input_description_hint">Description</string>
    <string name="text_view_date_prompt">Date:</string>
    <string name="text_view_date_separator">-</string>
    <string name="text_input_date_years_hint">YYYY</string>
    <string name="text_input_date_months_hint">MM</string>
    <string name="text_input_date_days_hint">DD</string>
    <string name="text_input_comment_hint">Comment</string>
    <string name="button_add_gear_text">Add Gear</string>
    <string name="content_description_dollar_sign">Dollar Sign</string>
</resources>