<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrEditGearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/add_gear_prompt"
            android:textSize="18sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    android:hint="@string/text_input_maker_hint"
                    app:counterMaxLength="20"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_gear_maker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="20"/>
                </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorContentDescription="Price must be formatted as ..."
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_gear_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_input_price_hint"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_description_hint"
            app:counterMaxLength="40"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_gear_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_view_date_prompt"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_date_years_hint"
                app:counterMaxLength="4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_gear_date_year"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="4"
                    android:ems="4"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_date_separator"
                android:textSize="24sp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_date_months_hint"
                app:counterMaxLength="2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_gear_date_month"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="2"
                    android:ems="3"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_date_separator"
                android:textSize="24sp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:counterMaxLength="2"
                android:hint="@string/text_input_date_days_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_gear_date_day"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:gravity="center_horizontal"
                    android:maxLength="2"
                    android:inputType="number"
                    android:ems="3"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:counterEnabled="true"
            android:hint="@string/text_input_comment_hint"
            app:counterMaxLength="20"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_gear_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_or_edit_gear"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/submit_button"
            android:enabled="false"
            android:onClick="handleOnAddGearButtonClick"
            android:text="@string/button_add_gear_text"
            android:textColor="@color/colorButtonText"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
